<resources>
    <string name="app_name">LocateYourFriends</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_list_title_manage">Manage</string>
    <string name="nav_list_map_view">Map View</string>
    <string name="nav_list_list_view">List View</string>
    <string name="nav_list_my_groups">My Groups</string>
    <string name="nav_list_add_group">Add Group</string>
    <string name="nav_list_create_group">Create Group</string>

    <!--Create Group -->
    <string name="add_group_label">Create a new group</string>
    <string name="add_group_pretty_name">Group name</string>
    <string name="add_group_hint_error">Hmmm&#8230; that doesn\'t seem to be a valid name</string>
    <string name="add_group_create_button">Create Group</string>

    <string name="notification_no_internet">No internet connection!</string>
    <string name="notification_no_gps">No GPS signal</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
