<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_person_pin_circle_black_24dp"
            android:title="@string/nav_list_map_view" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/nav_list_list_view" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_list_my_groups" />
        <item
            android:id="@+id/nav_add_group"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/nav_list_add_group" />
        <item
            android:id="@+id/nav_create_group"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/nav_list_create_group" />
    </group>

    <item android:title="@string/nav_list_title_manage">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
