<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    tools:context="com.nozagleh.locateyourfriends.CreateGroupFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtCreateGroupLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/add_group_label"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCreateGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:textColor="#fff"
            android:background="@drawable/default_btn"
            android:text="@string/add_group_create_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toTopOf="@id/btnCreateGroup"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/InputFieldError"
            app:layout_constraintTop_toBottomOf="@+id/txtCreateGroupLabel"
            app:layout_constraintVertical_bias="0.07999998">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtGroupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InputField"
                android:hint="@string/add_group_pretty_name" />

        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
